--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "i18next": "^25.5.2",
+    "mongoose": "^8.18.1",
     "next": "15.5.2",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
