--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-image-gallery": "^1.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
